<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/info_fragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/about" />

        <item
            android:id="@+id/history_fragment"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />

        <item
            android:id="@+id/videos_fragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/videos" />
        <item
            android:id="@+id/twitters_fragment"
            android:icon="@drawable/ic_twitter"
            android:title="@string/twitters" />
    </group>
</menu>
